--- a/swarm_logistics/Move.toml
+++ b/swarm_logistics/Move.toml
@@ -3,7 +3,7 @@ name = "swarm_logistics"
 version = "1.0.0"
 edition = "2024.beta"
 license = "MIT"
-authors = ["Swarm Logistics Team"]
+authors = ["OpenDive Technologies"]
 description = "Autonomous drone delivery smart contracts with swarm intelligence, route optimization, and decentralized financial management"
 repository = "https://github.com/opendive/suibotics-core"
 homepage = "https://suibotics.gg"
